fix: bảo mật — secrets ra .env, tắt OpenSearch, CORS động, Flyway validate
- docker-compose: tất cả secrets đọc từ .env (POSTGRES_PASSWORD,
  JWT_SECRET, NEXTAUTH_SECRET, MINIO_ROOT_PASSWORD, NEXTAUTH_URL)
- Tắt OpenSearch container (tiết kiệm 512MB RAM, chưa dùng)
- Thêm ALLOWED_ORIGINS env var cho CORS whitelist linh hoạt
- SecurityConfig: CORS đọc từ app.allowed-origins thay hardcode
- application.yml: bật flyway.validate-on-migrate=true, thêm allowed-origins
- .env.example: template cho developer mới

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>